ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /intern-1
          backend:
            serviceName: intern-1-svc
            servicePort: 80
        - path: /intern-2
          backend:
            serviceName: intern-2-svc
            servicePort: 80
        - path: /intern-3
          backend:
            serviceName: intern-3-svc
            servicePort: 80
